--- a/TheCivicsProject/ClientApp/src/app/app.component.html
+++ b/TheCivicsProject/ClientApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="display:grid; background-color:cyan; grid-template-columns: 50% 50%; grid-template-rows: 200px 581px; align-content: center; text-align: center">
 
   <div style="background-color: red; grid-column: 1 / span 2">
-    <div>Marquee</div>
+    <div tcpHighlight defaultColor="yellow">Marquee</div>
     <div>
       <ul>
         <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
